perf(load-testing): add k6 load tests and prod tuning notes
Introduce k6 scripts for voting and API scenarios to validate NFRs.
Document performance benchmarks and production tuning guidance for DB,
Redis, and JVM. Update application.properties with pool sizing and
threading recommendations to support high WebSocket concurrency.

Refs: performance NFRs and load testing plan